--- a/conf/distro/include/omnect-os-cve.conf
+++ b/conf/distro/include/omnect-os-cve.conf
@@ -5,7 +5,7 @@ CVE_PRODUCT:pn-avahi ?=             "avahi:avahi"
 CVE_PRODUCT:pn-bash ?=              "gnu:bash"
 CVE_PRODUCT:pn-binutils ?=          "gnu:binutils"
 CVE_PRODUCT:pn-bluez5 =             "bluez:bluez"
-CVE_PRODUCT:pn-bridge-utils ?=      "kernel:bride-utils"
+CVE_PRODUCT:pn-bridge-utils ?=      "kernel:bridge-utils"
 CVE_PRODUCT:pn-busybox ?=           "busybox:busybox"
 CVE_PRODUCT:pn-bzip2 ?=             "bzip:bzip2"
 CVE_PRODUCT:pn-cairo ?=             "cairographics:cairo"
