--- a/conf/distro/include/omnect-os-cve.conf
+++ b/conf/distro/include/omnect-os-cve.conf
@@ -1,4 +1,9 @@
+# We use "?=" to set CVE_PRODUCT for packages which don't set it and there is
+# an existing CPE for the package-
+# We use "=" to correct the CVE_PRODUCT of a package, e.g. dtrack doesn't
+# match if vendor is set to "*".
 CVE_PRODUCT:pn-acl ?=               "acl_project:acl"
+CVE_PRODUCT:pn-acpid =              "tedfelix:acpid2"
 CVE_PRODUCT:pn-alsa-lib ?=          "alsa-project:alsa-lib"
 CVE_PRODUCT:pn-attr ?=              "attr_project:attr"
 CVE_PRODUCT:pn-avahi ?=             "avahi:avahi"
