--- a/conf/distro/include/omnect-os-cve.conf
+++ b/conf/distro/include/omnect-os-cve.conf
@@ -35,6 +35,8 @@ CVE_PRODUCT:pn-glib ?=              "gnome:glib"
 CVE_PRODUCT:pn-glibc ?=             "gnu:glibc"
 CVE_PRODUCT:pn-gmp ?=               "gmplib:gmp"
 CVE_PRODUCT:pn-gnutls ?=            "gnu:gnutls"
+CVE_PRODUCT:pn-grub =               "gnu:grub2"
+CVE_PRODUCT:pn-grub-efi =           "gnu:grub2"
 # we use buysbox grep so don't set e.g. CVE_PRODUCT:pn-grep = "gnu:grep"
 CVE_PRODUCT:pn-iproute2 ?=          "iproute2_project:iproute2"
 CVE_PRODUCT:pn-iptables ?=          "netfilter:iptables"
@@ -77,6 +79,7 @@ CVE_PRODUCT:pn-libxxf86vm ?=        "x:libxxf86vm x.org:libxxf86vm"
 CVE_PRODUCT:pn-lua ?=               "lua:lua"
 CVE_PRODUCT:pn-lvm2 ?=              "heinz_mauelshagen:lvm2"
 CVE_PRODUCT:pn-lzo ?=               "lzo_project:lzo"
+CVE_PRODUCT:pn-lrzsz ?=             "lrzsz_project:lrzsz"
 CVE_PRODUCT:pn-mesa ?=              "mesa3d:mesa"
 CVE_PRODUCT:pn-mtd-utils ?=         "mtd-utils_project:mtd-utils"
 CVE_PRODUCT:pn-ncurses ?=           "gnu:ncurses"
