revisited omnect-os-cve.conf
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/conf/distro/include/omnect-os-cve.conf
+++ b/conf/distro/include/omnect-os-cve.conf
@@ -1,112 +1,3 @@
-# We use "?=" to set CVE_PRODUCT for packages which don't set it and there is
-# an existing CPE for the package-
-# We use "=" to correct the CVE_PRODUCT of a package, e.g. dtrack doesn't
-# match if vendor is set to "*".
-CVE_PRODUCT:pn-acl ?=               "acl_project:acl"
-CVE_PRODUCT:pn-acpid =              "tedfelix:acpid2"
-CVE_PRODUCT:pn-alsa-lib ?=          "alsa-project:alsa-lib"
-CVE_PRODUCT:pn-attr ?=              "attr_project:attr"
-CVE_PRODUCT:pn-avahi ?=             "avahi:avahi"
-CVE_PRODUCT:pn-bash ?=              "gnu:bash"
-CVE_PRODUCT:pn-binutils ?=          "gnu:binutils"
-CVE_PRODUCT:pn-bluez5 =             "bluez:bluez"
-CVE_PRODUCT:pn-bridge-utils ?=      "kernel:bridge-utils"
-CVE_PRODUCT:pn-busybox ?=           "busybox:busybox"
-CVE_PRODUCT:pn-bzip2 ?=             "bzip:bzip2"
-CVE_PRODUCT:pn-cairo ?=             "cairographics:cairo"
-CVE_PRODUCT:pn-containerd ?=        "linuxfoundation:containerd"
-CVE_PRODUCT:pn-coreutils ?=         "gnu:coreutils"
-CVE_PRODUCT:pn-dbus-glib ?=         "freedesktop:dbus-glib"
-CVE_PRODUCT:pn-dhcpd ?=             "dhcpd_project:dhcpd"
-CVE_PRODUCT:pn-dosfstools ?=        "dosfstools_project:dosfstools"
-CVE_PRODUCT:pn-dropbear =           "dropbear_ssh_project:dropbear_ssh"
-CVE_PRODUCT:pn-e2fsprogs ?=         "e2fsprogs_project:e2fsprogs"
-CVE_PRODUCT:pn-elfutils ?=          "elfutils_project:elfutils"
-CVE_PRODUCT:pn-ethtool ?=           "kernel:ethtool"
-CVE_PRODUCT:pn-expat ?=             "libexpat_project:libexpat"
-CVE_PRODUCT:pn-file ?=              "file_project:file"
-CVE_PRODUCT:pn-findutils ?=         "gnu:findutils"
-CVE_PRODUCT:pn-flac ?=              "flac_project:flac"
-CVE_PRODUCT:pn-fontconfig ?=        "fontconfig_project:fontconfig"
-CVE_PRODUCT:pn-freetype ?=          "freetype:freetype"
-CVE_PRODUCT:pn-gcc ?=               "gnu:gcc"
-CVE_PRODUCT:pn-gdb ?=               "gnu:gdb"
-CVE_PRODUCT:pn-glib ?=              "gnome:glib"
-CVE_PRODUCT:pn-glibc ?=             "gnu:glibc"
-CVE_PRODUCT:pn-gmp ?=               "gmplib:gmp"
-CVE_PRODUCT:pn-gnutls ?=            "gnu:gnutls"
-CVE_PRODUCT:pn-grub =               "gnu:grub2"
-CVE_PRODUCT:pn-grub-efi =           "gnu:grub2"
-# we use buysbox grep so don't set e.g. CVE_PRODUCT:pn-grep = "gnu:grep"
-CVE_PRODUCT:pn-iproute2 ?=          "iproute2_project:iproute2"
-CVE_PRODUCT:pn-iptables ?=          "netfilter:iptables"
-CVE_PRODUCT:pn-jq ?=                "jq_project:jq"
-CVE_PRODUCT:pn-kmod ?=              "kernel:kmod"
-CVE_PRODUCT:pn-libaio ?=            "libaio_project:libaio"
-CVE_PRODUCT:pn-libarchive ?=        "libarchive:libarchive"
-CVE_PRODUCT:pn-libcap ?=            "libcap_project:libcap"
-CVE_PRODUCT:pn-libcap-ng ?=         "libcap-ng_project:libcap-ng"
-CVE_PRODUCT:pn-libdaemon ?=         "libdaemon_project:libdaemon"
-CVE_PRODUCT:pn-libffi ?=            "libffi_project:libffi"
-CVE_PRODUCT:pn-libgcrypt ?=         "gnu:libgcrypt"
-CVE_PRODUCT:pn-libgpg-error ?=      "gnupg:libgpg-error"
-CVE_PRODUCT:pn-libical ?=           "libical_project:libical"
-CVE_PRODUCT:pn-libice ?=            "freedesktop:libice"
-CVE_PRODUCT:pn-libidn2 ?=           "gnu:libidn2"
-CVE_PRODUCT:pn-libmnl ?=            "netfilter:libmnl"
-CVE_PRODUCT:pn-libnftnl ?=          "netfilter:libnftnl"
-CVE_PRODUCT:pn-libnl ?=             "libnl_project:libnl"
-CVE_PRODUCT:pn-libpcre =            "pcre:pcre"
-CVE_PRODUCT:pn-libpng ?=            "libpng:libpng"
-CVE_PRODUCT:pn-libproxy ?=          "libproxy_project:libproxy"
-CVE_PRODUCT:pn-libsamplerate =      "libsamplerate_project:libsamplerate"
-CVE_PRODUCT:pn-libseccomp ?=        "libseccomp_project:libseccomp"
-CVE_PRODUCT:pn-libsndfile =         "libsndfile_project:libsndfile"
-CVE_PRODUCT:pn-libtirpc ?=          "libtirpc_project:libtirpc"
-CVE_PRODUCT:pn-libtool ?=           "gnu:libtool"
-CVE_PRODUCT:pn-libunistring ?=      "gnu:libunistring"
-CVE_PRODUCT:pn-libvorbis ?=         "xiph.org:libvorbis"
-CVE_PRODUCT:pn-libx11 ?=            "x:libx11 x.org:libx11"
-CVE_PRODUCT:pn-libxcb ?=            "x:libxcb x.org:libxcb"
-CVE_PRODUCT:pn-libxdmcp ?=          "x:libxdmcp x.org:libxdmcp"
-CVE_PRODUCT:pn-libxext ?=           "x:libxext x.org:libxext"
-CVE_PRODUCT:pn-libxfixes ?=         "x:libxfixes x.org:libxfixes"
-CVE_PRODUCT:pn-libxkbcommon ?=      "xkbcommon:libxkbcommon"
-CVE_PRODUCT:pn-libxml2 ?=           "xmlsoft:libxml2"
-CVE_PRODUCT:pn-libxrandr ?=         "x:libxrandr x.org:libxrandr"
-CVE_PRODUCT:pn-libxrender ?=        "x:libxrender x.org:libxrender"
-CVE_PRODUCT:pn-libxxf86vm ?=        "x:libxxf86vm x.org:libxxf86vm"
-CVE_PRODUCT:pn-lua ?=               "lua:lua"
-CVE_PRODUCT:pn-lvm2 ?=              "heinz_mauelshagen:lvm2"
-CVE_PRODUCT:pn-lzo ?=               "lzo_project:lzo"
-CVE_PRODUCT:pn-lrzsz ?=             "lrzsz_project:lrzsz"
-CVE_PRODUCT:pn-mesa ?=              "mesa3d:mesa"
-CVE_PRODUCT:pn-mtd-utils ?=         "mtd-utils_project:mtd-utils"
-CVE_PRODUCT:pn-ncurses ?=           "gnu:ncurses"
-CVE_PRODUCT:pn-notary ?=            "docker:notary"
-CVE_PRODUCT:pn-onig ?=              "oniguruma_project:oniguruma"
-CVE_PRODUCT:pn-openssh ?=           "openbsd:openssh"
-CVE_PRODUCT:pn-parted ?=            "parted_project:parted"
-CVE_PRODUCT:pn-perl ?=              "perl:perl"
-CVE_PRODUCT:pn-pixman ?=            "pixman:pixman"
-CVE_PRODUCT:pn-polkit ?=            "polkit_project:polkit"
-CVE_PRODUCT:pn-procps ?=            "procps_project:procps"
-CVE_PRODUCT:pn-python ?=            "python:python"
-CVE_PRODUCT:pn-quota =              "jan_kara:linux_diskquota"
-CVE_PRODUCT:pn-readline ?=          "gnu:readline"
-CVE_PRODUCT:pn-rpcbind ?=           "rpcbind_project:rpcbind"
-CVE_PRODUCT:pn-runc ?=              "linuxfoundation:runc"
-CVE_PRODUCT:pn-shadow ?=            "shadow_project:shadow"
-CVE_PRODUCT:pn-sqlite3 =            "sqlite:sqlite"
-CVE_PRODUCT:pn-sudo ?=              "sudo_project:sudo"
-CVE_PRODUCT:pn-sysfsutils ?=        "sysfsutils_project:sysfsutils"
-CVE_PRODUCT:pn-systemd ?=           "systemd_project:systemd"
-CVE_PRODUCT:pn-tini ?=              "tini_project:tini"
-CVE_PRODUCT:pn-util-linux ?=        "kernel:util-linux"
-CVE_PRODUCT:pn-vala ?=              "gnome:vala"
-CVE_PRODUCT:pn-wayland ?=           "wayland:wayland"
-CVE_PRODUCT:pn-websocketpp ?=       "zaphoyd:websocketpp"
-CVE_PRODUCT:pn-wpa_supplicant ?=    "w1.fi:wpa_supplicant"
-CVE_PRODUCT:pn-xz ?=                "tukaani:xz"
-CVE_PRODUCT:pn-zlib ?=              "zlib:zlib"
-CVE_PRODUCT:pn-zstd ?=              "facebook:zstandard"
+CVE_PRODUCT:pn-expat ??=    "libexpat"
+CVE_PRODUCT:pn-onig ??=     "oniguruma"
+CVE_PRODUCT:pn-zstd ??=     "zstandard"
